--- a/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/wwwroot/index.html
+++ b/Csharp/BlazorInAction/BlazingTrails/BlazingTrails.Client/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlazingTrails.Client</title>
+    <title>Blazing Trails</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="BlazingTrails.Client.styles.css" rel="stylesheet" />
 </head>
 
 <body>
