feature(top): finish the recipe website

--- a/Web/The-Odin-Project/Foundations/odin-recipes/index.html
+++ b/Web/The-Odin-Project/Foundations/odin-recipes/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/pepper-steak.html">Pepper Steak</a></li>
+        <li><a href="recipes/warm-berry-compote.html">Warn Berry Compote</a></li>
+        <li><a href="recipes/cilantro-lime-chicken.html">Cilantro-lime Chicken</a></li>
+    </ul>
 </body>
 
 </html>
