--- a/Web/The-Odin-Project/Foundations/landing-page/index.html
+++ b/Web/The-Odin-Project/Foundations/landing-page/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 
@@ -11,9 +12,9 @@
     <div class="header">
         <div class="header-logo">Header Logo</div>
         <ul class="header-link">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
     </div>
 
@@ -34,11 +35,12 @@
             <div>this is some subtext under an illustration or image</div>
         </div>
 
-        <div class=content-quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+        <div class="content-quote">
+            <p class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+                space,
                 or maybe people will actually read it. Who knows? All I know is that it looks nice.
             </p>
-            <p>
+            <p class="author">
                 -Thor, God of Thunder
             </p>
         </div>
