--- a/Web/The-Odin-Project/Foundations/landing-page/index.html
+++ b/Web/The-Odin-Project/Foundations/landing-page/index.html
@@ -46,9 +46,11 @@
         </div>
 
         <div class="content-banner">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <div class="banner-text-container">
+                <p class="banner-text-header">Call to action! It's time!</p>
+                <p class="banner-text-content">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="banner-btn">Sign up</button>
         </div>
     </div>
 
