feature(top): landing-page, style content-header

--- a/Web/The-Odin-Project/Foundations/landing-page/index.html
+++ b/Web/The-Odin-Project/Foundations/landing-page/index.html
@@ -20,11 +20,15 @@
 
     <div class="content">
         <div class="content-header">
-            <div>This website is awesome</div>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
-                lower contrast</p>
-            <button>Sign up</button>
-            <div>this is a placeholder for a image</div>
+            <div class="header-left-container">
+                <p class="left-container-header">This website is awesome</p>
+                <p class="left-container-text">This website has some subtext that goes here under the main title. It's a
+                    smaller font and the color
+                    is
+                    lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="img-placeholder">this is a placeholder for a image</div>
         </div>
 
         <div class="content-info">
