feature(top): landing-page, style cards section, finished

--- a/Web/The-Odin-Project/Foundations/landing-page/index.html
+++ b/Web/The-Odin-Project/Foundations/landing-page/index.html
@@ -32,11 +32,28 @@
         </div>
 
         <div class="content-info">
-            <div>Some random information.</div>
-            <div>this is some subtext under an illustration or image</div>
-            <div>this is some subtext under an illustration or image</div>
-            <div>this is some subtext under an illustration or image</div>
-            <div>this is some subtext under an illustration or image</div>
+            <p>Some random information.</p>
+            <ul>
+                <li>
+                    <div class="card-img-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <div class="card-img-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <div class="card-img-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+                <li>
+                    <div class="card-img-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </li>
+                <!-- <div>this is some subtext under an illustration or image</div>
+                <div>this is some subtext under an illustration or image</div>
+                <div>this is some subtext under an illustration or image</div> -->
+            </ul>
         </div>
 
         <div class="content-quote">
