--- a/Web/The-Odin-Project/Foundations/rock-paper-scissors/index.html
+++ b/Web/The-Odin-Project/Foundations/rock-paper-scissors/index.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+    <h1>Rock-Paper-Scissors</h1>
+    <div id="player-choices">
+        <button id="btn-rock">Rock</button>
+        <button id="btn-paper">Paper</button>
+        <button id="btn-scissors">Scissors</button>
+    </div>
+    <ul id="results"></ul>
+
     <script src="game.js"></script>
 </body>
 
